# cpp-cgdk

./: CMakeLists.txt  MyStrategy.cpp  MyStrategy.h  RemoteProcessClient.cpp  RemoteProcessClient.h  Runner.cpp  Strategy.h  cpp-cgdk_vs10.vcxproj  cpp-cgdk_vs10.vcxproj.filters  cpp-cgdk_vs11.vcxproj  cpp-cgdk_vs11.vcxproj.filters  cpp-cgdk_vs12.vcxproj  cpp-cgdk_vs12.vcxproj.filters  cpp-cgdk_vs9.vcproj
cpp-cgdk.xcodeproj/: project.pbxproj
model/: Bonus.cpp  Bonus.h  BonusType.h  Car.cpp  Car.h  CarType.h  CircularUnit.cpp  CircularUnit.h  Direction.h  Game.cpp  Game.h  Move.cpp  Move.h  OilSlick.cpp  OilSlick.h  Player.cpp  Player.h  PlayerContext.cpp  PlayerContext.h  Projectile.cpp  Projectile.h  ProjectileType.h  RectangularUnit.cpp  RectangularUnit.h  TileType.h  Unit.cpp  Unit.h  World.cpp  World.h
